--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
           <div class="container">
             <!-- Logo -->
             <a href="index-2.html" class="navbar-brand">
-              <img src="assets/img/logo/logo-1.png" alt="Image Description">
+              <!-- <img src="assets/img/logo/logo-1.png" alt="Image Description"> -->
               MAWAQIF
             </a>
             <!-- End Logo -->
