--- a/home.html
+++ b/home.html
@@ -80,12 +80,12 @@
           <li class="list-inline-item g-mb-10">
             <a class="u-tags-v1 g-color-main g-brd-around g-brd-gray-light-v3 g-bg-gray-dark-v2--hover g-brd-gray-dark-v2--hover g-color-white--hover rounded g-py-4 g-px-10" href="#" style="background-color: rgb(194, 247, 114);">ACTIVE</a>
           </li>
-          <li class="list-inline-item g-mb-10">
+<!--           <li class="list-inline-item g-mb-10">
             <a class="u-tags-v1 g-color-main g-brd-around g-brd-gray-light-v3 g-bg-gray-dark-v2--hover g-brd-gray-dark-v2--hover g-color-white--hover rounded g-py-4 g-px-10" href="#">5 PARKING SPACES</a>
           </li>
           <li class="list-inline-item g-mb-10">
             <a class="u-tags-v1 g-color-main g-brd-around g-brd-gray-light-v3 g-bg-gray-dark-v2--hover g-brd-gray-dark-v2--hover g-color-white--hover rounded g-py-4 g-px-10" href="#" style="background-color: gold;">DEFAULTER DETECTED</a>
-          </li>
+          </li> -->
           
         </ul>
         <!-- End Tags -->
