--- a/home.html
+++ b/home.html
@@ -101,11 +101,11 @@
                 <i class="icon-grid g-pos-rel g-top-1 g-mr-5"></i> List View
               </a>
             </li>
-            <li class="list-inline-item">
+<!--             <li class="list-inline-item">
               <a class="u-link-v5 g-color-gray-dark-v5 g-color-gray-dark-v5--hover" href="#">
                 <i class="icon-list g-pos-rel g-top-1 g-mr-5"></i> Grid View
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
         <!-- End Search Info -->
@@ -134,15 +134,15 @@
         <!-- Pagination -->
         <nav class="g-mb-50" aria-label="Page Navigation">
           <ul class="list-inline">
-            <li class="list-inline-item">
+<!--             <li class="list-inline-item">
               <a class="u-pagination-v1__item u-pagination-v1-5 rounded g-pa-4-13" href="#" aria-label="Previous">
                 <span aria-hidden="true">
                   <i class="fa fa-angle-left"></i>
                 </span>
                 <span class="sr-only">Previous</span>
               </a>
-            </li>
-            <li class="list-inline-item g-hidden-sm-down">
+            </li> -->
+<!--             <li class="list-inline-item g-hidden-sm-down">
               <a class="u-pagination-v1__item u-pagination-v1-5 u-pagination-v1-5--active rounded g-pa-4-11" href="#">1</a>
             </li>
             <li class="list-inline-item g-hidden-sm-down">
@@ -167,7 +167,7 @@
             </li>
             <li class="list-inline-item float-right">
               <span class="u-pagination-v1__item-info g-pa-4-11">Page 1 of 80</span>
-            </li>
+            </li> -->
           </ul>
         </nav>
         <!-- End Pagination -->
